--- a/effect/swiper.html
+++ b/effect/swiper.html
@@ -159,11 +159,11 @@
             <!--swiper-->
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="img/img_v01.png" alt="이미지1"></div>
-                    <div class="swiper-slide"><img src="img/img_v02.png" alt="이미지2"></div>
-                    <div class="swiper-slide"><img src="img/img_v03.png" alt="이미지3"></div>
-                    <div class="swiper-slide"><img src="img/img_v04.png" alt="이미지4"></div>
-                    <div class="swiper-slide"><img src="img/img_v05.png" alt="이미지5"></div>
+                    <div class="swiper-slide"><img src="../script/assets/img/img_v01.png" alt="이미지1"></div>
+                    <div class="swiper-slide"><img src="../script/assets/img/img_v02.png" alt="이미지2"></div>
+                    <div class="swiper-slide"><img src="../script/assets/img/img_v03.png" alt="이미지3"></div>
+                    <div class="swiper-slide"><img src="../script/assets/img/img_v04.png" alt="이미지4"></div>
+                    <div class="swiper-slide"><img src="../script/assets/img/img_v05.png" alt="이미지5"></div>
                 </div>
                 <!-- Arrows -->
                 <div class="swiper-button-next"></div>
