--- a/script/icdex.html
+++ b/script/icdex.html
@@ -95,44 +95,59 @@
                 </script>
             </div>
             
-            <div class="col-md-9" role="main">
+            <div class="col-md-12" role="main">
                 <!-- Intro1 -->
                 <div class="bs-docs-section">
                     <h2 id="intro1" class="page-header">제이쿼리</h2>
                     <div class="row">
                         <div class="col-xs-6 col-md-3">
-                            <div class="alert alert-success" role="alert">
-                                <a href="../jquery/jquery05_attr.html">attr()<br>속성 설정하기</a>
+                            <div class="alert alert-info" role="alert">
+                                <a href="jqueryRefer/jquery-cover.html">jQuery<br>표지</a>
                             </div>
                         </div>
                         <div class="col-xs-6 col-md-3">
                             <div class="alert alert-info" role="alert">
-                                <a href="../jquery/jquery06_addClass.html">addClass()<br>속성 설정하기</a> 
+                                <a href="jqueryRefer/jquery_attr.html">attr()<br>속성 설정하기</a>
                             </div>
                         </div>
                         <div class="col-xs-6 col-md-3">
-                            <div class="alert alert-warning" role="alert">
-                                <a href="../jquery/jquery07_css.html">css()<br>속성 설정하기</a> 
+                            <div class="alert alert-info" role="alert">
+                                <a href="jqueryRefer/jquery_addClass.html">addClass()<br>속성 설정하기</a> 
                             </div>
                         </div>
                         <div class="col-xs-6 col-md-3">
-                            <div class="alert alert-danger" role="alert">
-                                <a href="../jquery/jquery08_append.html">append()<br>속성 설정하기</a> 
+                            <div class="alert alert-info" role="alert">
+                                <a href="jqueryRefer/jquery_css.html">css()<br>속성 설정하기</a> 
                             </div>
                         </div>
                         <div class="col-xs-6 col-md-3">
-                            <div class="alert alert-danger" role="alert">
-                                <a href="../jquery/jquery09_animation.html">animation()<br>속성 설정하기</a> 
+                            <div class="alert alert-info" role="alert">
+                                <a href="jqueryRefer/jquery_append.html">append()<br>속성 설정하기</a> 
                             </div>
                         </div>
                         <div class="col-xs-6 col-md-3">
-                            <div class="alert alert-danger" role="alert"> 
-                                <a href="../jquery/jquery10_animation2.html">animation()<br>속성 설정하기</a> 
+                            <div class="alert alert-info" role="alert">
+                            <a href="jqueryRefer/jquery_animation.html">animation()<br>속성 설정하기</a> 
                             </div>
                         </div>
                         <div class="col-xs-6 col-md-3">
-                            <div class="alert alert-danger" role="alert"> 
-                                <a href="../jquery/jquery11_dimensions.html">dimensions()<br>속성 설정하기</a> 
+                            <div class="alert alert-info" role="alert"> 
+                                <a href="jqueryRefer/jquery_animation2.html">animation2<br>속성 설정하기</a> 
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <div class="alert alert-info" role="alert"> 
+                                <a href="jqueryRefer/jquery_dimensions.html">dimensions()<br>속성 설정하기</a> 
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <div class="alert alert-info" role="alert"> 
+                                <a href="jqueryRefer/jquery_offset.html">offset()<br>속성 설정하기</a> 
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <div class="alert alert-info" role="alert"> 
+                                <a href="jqueryRefer/jquery_scroll.html">scroll()<br>속성 설정하기</a> 
                             </div>
                         </div>
                     </div>
@@ -145,17 +160,22 @@
                     <div class="row">
                         <div class="col-xs-6 col-md-3">
                             <div class="alert alert-success" role="alert">
-                                <a href="../css/border-radius.html">border-radius<br>보더값 주기</a>
+                                <a href="cssEffect/border-radius.html">border-radius<br>보더값 주기</a>
                             </div>
                         </div>
                         <div class="col-xs-6 col-md-3">
                             <div class="alert alert-success" role="alert">
-                                <a href="../css/box-shadow.html">box-shadow<br>box-shadow</a>
+                                <a href="cssEffect/box-shadow.html">box-shadow<br>박스 그림자 효과</a>
                             </div>
                         </div>
                         <div class="col-xs-6 col-md-3">
                             <div class="alert alert-success" role="alert">
-                                <a href="../css/display-flex.html">display-flex<br>display-flex</a>
+                                <a href="cssEffect/display-flex.html">display-flex<br>플렉스</a>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <div class="alert alert-success" role="alert">
+                                <a href="cssEffect/display-grid.html">display-grid<br>그리드</a>
                             </div>
                         </div>
                     </div>
@@ -167,8 +187,8 @@
                     <h2 id="intro3" class="page-header">자바스크립트</h2>
                     <div class="row">
                         <div class="col-xs-6 col-md-3">
-                            <div class="alert alert-success" role="alert">
-                                <a href="../css/border-radius.html">border-radius<br>보더값 주기</a>
+                            <div class="alert alert-warning" role="alert">
+                                <a href="cssEffect/border-radius.html">border-radius<br>보더값 주기</a>
                             </div>
                         </div>
                     </div>
@@ -177,31 +197,65 @@
 
                 <!-- Intro4 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro4" class="page-header">샘플</h2>
+                    <h2 id="intro4" class="page-header">Parallax</h2>
                     <div class="row">
                         <div class="col-xs-6 col-md-3">
-                            <div class="alert alert-success" role="alert">
-                                <a href="https://codepen.io/9silvery2/pen/ExZyzEX?editors=0010" target="_blank">탭 메뉴01 - 제이쿼리</a>
+                            <div class="alert alert-danger" role="alert">
+                                <a href="parallaxEffect/parallaxEffect-cover.html" target="_blank">패럴랙스 이펙트<br>표지</a>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <div class="alert alert-danger" role="alert">
+                                <a href="parallaxEffect/parallaxEffect01-jquery.html" target="_blank">패럴랙스 이펙트<br>jquery</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- //Intro4 -->
-            </div>
-            <!-- //col-md-9 -->
-            <!-- //col-md-3 -->
-            <div class="col-md-3">
-                <div class="bs-sidebar hidden-print" role="complementary">
-                    <ul class="nav bs-sidenav">
-                        <li><a href="#intro1">제이쿼리</a></li>
-                        <li><a href="#intro2">CSS</a></li>
-                        <li><a href="#intro3">자바스크립트</a></li>
-                        <li><a href="#intro4">샘플</a></li>
-                    </ul>
+
+                <!-- Intro5 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro5" class="page-header">Menu effect</h2>
+                    <div class="row">
+                        <div class="col-xs-6 col-md-3">
+                            <div class="alert alert-info" role="alert">
+                                <a href="menuEffect/menuEffect-cover.html" target="_blank">메뉴 이펙트<br>표지</a>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <div class="alert alert-info" role="alert">
+                                <a href="menuEffect/menuEffect01-jquery.html" target="_blank">메뉴 이펙트<br>jQuery</a>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <div class="alert alert-info" role="alert">
+                                <a href="menuEffect/menuEffect01-javascript.html" target="_blank">메뉴 이펙트<br>javascript</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <!-- //Intro5 -->
+
+                <!-- Intro6 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro6" class="page-header">Mouse effect</h2>
+                    <div class="row">
+                        <div class="col-xs-6 col-md-3">
+                            <div class="alert alert-info" role="alert">
+                                <a href="mouseEffect/mouseErffect01-jquery.html" target="_blank">마우스 이펙트<br>표지</a>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <div class="alert alert-info" role="alert">
+                                <a href="mouseEffect/mouseErffect01-jquery.html" target="_blank">마우스 이펙트<br>jQuery</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- //Intro5 -->
             </div>
-            <!--//col-md-3 -->
-        </div>
+            <!-- //col-md-12 -->
+            
         <!-- //row -->
     </div>
     <!-- //container -->
