--- a/script/jqueryRefer/jquery_addClass.html
+++ b/script/jqueryRefer/jquery_addClass.html
@@ -271,11 +271,11 @@
     <div id="sample1" class="sample">
         <h2>Sample01 : 이미지 선택하기 : addClass(), removeClass() <span class="dot"></span></h2>
         <div class="ex ex1">
-            <div><img src="img/images05.jpg" alt="샘플이미지1"></div>
-            <div><img src="img/images06.jpg" alt="샘플이미지2"></div>
-            <div><img src="img/images07.jpg" alt="샘플이미지3"></div>
-            <div><img src="img/images08.jpg" alt="샘플이미지4"></div>
-            <div><img src="img/images09.jpg" alt="샘플이미지5"></div>
+            <div><img src="../assets/img/images05.jpg" alt="샘플이미지1"></div>
+            <div><img src="../assets/img/images06.jpg" alt="샘플이미지2"></div>
+            <div><img src="../assets/img/images07.jpg" alt="샘플이미지3"></div>
+            <div><img src="../assets/img/images08.jpg" alt="샘플이미지4"></div>
+            <div><img src="../assets/img/images09.jpg" alt="샘플이미지5"></div>
         </div>
         <div class="re">
             <a href="#c" class="btn1-0">리셋</a>
@@ -288,11 +288,11 @@
     <div id="sample2" class="sample">
         <h2>Sample02 : 이미지 선택하기 : toggleClass()<span class="dot"></span></h2>
         <div class="ex ex2">
-            <div><a href="#c"><img src="img/images05.jpg" alt="샘플이미지1"></a></div>
-            <div><a href="#c"><img src="img/images06.jpg" alt="샘플이미지2"></a></div>
-            <div><a href="#c"><img src="img/images07.jpg" alt="샘플이미지3"></a></div>
-            <div><a href="#c"><img src="img/images08.jpg" alt="샘플이미지4"></a></div>
-            <div><a href="#c"><img src="img/images09.jpg" alt="샘플이미지5"></a></div>
+            <div><a href="#c"><img src="../assets/img/images05.jpg" alt="샘플이미지1"></a></div>
+            <div><a href="#c"><img src="../assets/img/images06.jpg" alt="샘플이미지2"></a></div>
+            <div><a href="#c"><img src="../assets/img/images07.jpg" alt="샘플이미지3"></a></div>
+            <div><a href="#c"><img src="../assets/img/images08.jpg" alt="샘플이미지4"></a></div>
+            <div><a href="#c"><img src="../assets/img/images09.jpg" alt="샘플이미지5"></a></div>
         </div>
         <div class="re">
             <a href="#c" class="btn2-0">리셋</a>
@@ -305,11 +305,11 @@
     <div id="sample3" class="sample">
         <h2>Sample03 : 클래스 검색하기 : hasClass()<span class="dot"></span></h2>
         <div class="ex ex3">
-            <div><a href="#c"><img src="img/images10.jpg" alt="샘플이미지1"></a></div>
-            <div><a href="#c"><img src="img/images11.jpg" alt="샘플이미지2"></a></div>
-            <div class="selected"><a href="#c"><img src="img/images12.jpg" alt="샘플이미지3"></a></div>
-            <div><a href="#c"><img src="img/images13.jpg" alt="샘플이미지4"></a></div>
-            <div class="selected"><a href="#c"><img src="img/images14.jpg" alt="샘플이미지5"></a></div>
+            <div><a href="#c"><img src="../assets/img/images10.jpg" alt="샘플이미지1"></a></div>
+            <div><a href="#c"><img src="../assets/img/images11.jpg" alt="샘플이미지2"></a></div>
+            <div class="selected"><a href="#c"><img src="../assets/img/images12.jpg" alt="샘플이미지3"></a></div>
+            <div><a href="#c"><img src="../assets/img/images13.jpg" alt="샘플이미지4"></a></div>
+            <div class="selected"><a href="#c"><img src="../assets/img/images14.jpg" alt="샘플이미지5"></a></div>
         </div>
         <div class="re">
             <a href="#c" class="btn3-0">리셋</a>
