--- a/script/jqueryRefer/jquery_attr.html
+++ b/script/jqueryRefer/jquery_attr.html
@@ -157,7 +157,7 @@
     <div id="sample1" class="sample">
         <h2>Sample01 : 이미지 속성 알아내기 <span class="dot"></span></h2>
         <div class="ex ex1">
-            <img src="img/images01.jpg" alt="샘플이미지" class="img">
+            <img src="../assets/img/images01.jpg" alt="샘플이미지" class="img">
             <p class="text text1">여기에 표시됩니다.</p>
         </div>
         <div class="re">
@@ -171,8 +171,8 @@
     <div id="sample2" class="sample">
         <h2>Sample02 : 이미지 속성 변경하기 <span class="dot"></span></h2>
         <div class="ex ex2">
-            <img src="img/images02.jpg" alt="샘플이미지2" width="400">
-            <img src="img/images03.jpg" alt="샘플이미지3" width="400">
+            <img src="../assets/img/images02.jpg" alt="샘플이미지2" width="400">
+            <img src="../assets/img/images03.jpg" alt="샘플이미지3" width="400">
             <p class="text text2">여기에 표시됩니다.</p>
         </div>
         <div class="re">
@@ -186,11 +186,11 @@
     <div id="sample3" class="sample">
         <h2>Sample03 : 이미지 속성 순차적으로 변경하기 <span class="dot"></span></h2>
         <div class="ex ex3">
-            <img src="img/images04.jpg" alt="샘플이미지4" width="200">
-            <img src="img/images05.jpg" alt="샘플이미지5" width="200">
-            <img src="img/images06.jpg" alt="샘플이미지6" width="200">
-            <img src="img/images07.jpg" alt="샘플이미지7" width="200">
-            <img src="img/images08.jpg" alt="샘플이미지8" width="200">
+            <img src="../assets/img/images04.jpg" alt="샘플이미지4" width="200">
+            <img src="../assets/img/images05.jpg" alt="샘플이미지5" width="200">
+            <img src="../assets/img/images06.jpg" alt="샘플이미지6" width="200">
+            <img src="../assets/img/images07.jpg" alt="샘플이미지7" width="200">
+            <img src="../assets/img/images08.jpg" alt="샘플이미지8" width="200">
         </div>
         <div class="re">
             <a href="#c" class="btn3-0">리셋</a>
@@ -213,7 +213,7 @@
                     </ul>
                 </div>
                 <div class="tab-img">
-                    <img src="img/images09.jpg" alt="이미지1">
+                    <img src="../assets/img/images09.jpg" alt="이미지1">
                 </div>
             </div>
             
