--- a/script/jqueryRefer/jquery_scroll.html
+++ b/script/jqueryRefer/jquery_scroll.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jQuery | dimensions()</title>
+    <title>jQuery | scroll()</title>
     <style>
         @font-face {
             font-family: 'NEXON Lv1 Gothic OTF';
@@ -115,6 +115,17 @@
         .blue { background-color: #e3f2fd;}
 
         /* option */
+        body {
+            height: 20000px;
+            width: 20000px;
+        }
+        #sample1 {
+            position: fixed;
+            width: 50%;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
         .ex1 {
             min-height: 300px;
             display: flex;
@@ -123,54 +134,52 @@
             position: relative;
         }
 
-        .circle1 {
-            width: 80px;
-            height: 80px;
-            background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+        .circle {
+            width: 100px;
+            height: 100px;
+            color: #c7254e;
+            background: #f9f2f4;
             border-radius: 50%;
-            display: block;
+            border: 1px dashed #a51a3d;
             text-align: center;
-            line-height: 80px;
-            color: #fff;
-            position: absolute;
-            left: 50%; top: 50%;
-            transform: translate(-50%, -50%);    
-            padding: 5px;
-            margin: 5px;
-            border: 5px solid #a2f3db;
+            line-height: 100px;
+            margin: 10px;
+            position: relative;
         }
 
-        .text1 {
+        .circle:nth-child(1)::after {
+            content: 'scrollTop';
             position: absolute;
-            left: 20px; bottom: 15px;
+            left: 50%;
+            bottom: -70%;
+            transform: translate(-50%);
+        }
+        .circle:nth-child(2)::after {
+            content: 'scrollLeft';
+            position: absolute;
+            left: 50%;
+            bottom: -70%;
+            transform: translate(-50%);
         }
 
-        /* sample01 */
+
 
     </style>
 </head>
 <body>
-    <h1>jQuery dimensions()</h1>
+    <h1>jQuery scroll()</h1>
     <div id="sample1" class="sample">
-        <h2>Sample01 : 애니메이션01 <span class="dot"></span></h2>
+        <h2>Sample01 : scroll01 <span class="dot"></span></h2>
         <div class="ex ex1">
-            <span class="circle circle1">01</span>
-
-            <p class="text text1">여기에 표시됩니다.</p>
+            <span class="circle circle1-1"><em>0</em>px</span>
+            <span class="circle circle1-2"><em>0</em>px</span>
         </div>
         <div class="re">
-            <a href="#" class="btn1-1">클릭 : 원의 가로(width) 값을 구합니다.</a>
-            <a href="#" class="btn1-2">클릭 : 원의 세로(height) 값을 구합니다.</a>
-            <a href="#" class="btn1-3">클릭 : 원의 가로(innerWidth) 값을 구합니다.</a>
-            <a href="#" class="btn1-4">클릭 : 원의 세로(innerHeight) 값을 구합니다.</a>
-            <a href="#" class="btn1-5">클릭 : 원의 가로(OuterWidth) 값을 구합니다.</a>
-            <a href="#" class="btn1-6">클릭 : 원의 세로(OutherHeight) 값을 구합니다.</a>
-            
+            <a href="#" class="btn1-1">스크롤을 하세요!</a>
         </div>
     </div>
 
     <!--//sample1-->
-    
 
 
 
@@ -180,75 +189,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script>
-        //width()
-        //height()
-        //innerWidth()
-        //innerHeight()
-        //outerWidth()
-        //innerHeight()
-        //원을 클릭하면 원의 클래스 이름(attr)을 텍스트에 출력해주세요
-        // $(".circle1").on("click", function(){        //여러 메서드를 활용 가능
-        //     $(".text1").text($(".circle1").attr("class"));
-        // });
-        //버튼을 클릭하면 원의 배경색을 변경해주세요
-        // $(".btn1-1").click(function(){       //클릭만 가능한 메서드
-        //     $(".circle1")
-        //     .css({"background-image":"linear-gradient(to top, #88d3ce 0%, #6e45e2 100%)"});
-        //     setTimeout(() => {
-        //         alert("색이 변경되었습니다.")
-        //     }, 1000);
-        // });
-
-        $(".re a").on("click", function(e){
-            e.preventDefault();
+        $(window).scroll(function(){
+            $(".circle1-1 em").text( parseInt($(window).scrollTop()) );
+            $(".circle1-2 em").text( parseInt($(window).scrollLeft()) );
         });
-
-        function demensition(name, num){
-            $(".text1").text("이 원의 " + name + "값은 " + num + "px입니다.");
-        }
-
-        $(".btn1-1").on("click", function(e){
-            demensition( "가로", $(".circle1").width() );
-        });
-
-        $(".btn1-2").on("click", function(e){
-            demensition( "세로", $(".circle1").height() );
-        });
-
-        $(".btn1-3").on("click", function(e){
-            demensition( "가로", $( ".circle1").innerWidth() );
-        });
-
-        $(".btn1-4").on("click", function(e){
-            demensition( "세로", $(".circle1").innerHeight() );
-        });
-
-        $(".btn1-5").on("click", function(e){
-            demensition( "가로", $(".circle1").outerWidth() );
-        });
-
-        $(".btn1-6").on("click", function(e){
-            demensition( "세로", $(".circle1").outerHeight() );
-        });
-
-        // $(".btn1-3").on("click", function(e){
-        //     $(".text1").text( $(".circle1").innerWidth() );
-        // });
-
-        // $(".btn1-4").on("click", function(e){
-        //     $(".text1").text( $(".circle1").innerHeight() );
-        // });
-
-        // $(".btn1-5").on("click", function(e){
-        //     $(".text1").text( $(".circle1").outerWidth() );
-        // });
-
-        // $(".btn1-6").on("click", function(e){
-        //     $(".text1").text( $(".circle1").outerHeight() );
-        // });
-
-
-
     </script>
 </body>
 </html>
